<resources>
    <string name="app_name">GymLog</string>
    <string name="login_google_btn">Continua con Google</string>
    <string name="login_email_btn">Continua con correo</string>
    <string name="login_anonymous">Continua como anónimo</string>
    <string name="login_title">Inicio de Sesión</string>
    <string name="login_without_account">¿Aún no tienes cuenta?</string>
    <string name="login_action">Iniciar Sesión</string>
    <string name="sign_up_action">Registrarse</string>
    <string name="sign_up_title">Registro</string>
    <string name="email_text">Correo</string>
    <string name="password_text">Contraseña</string>
    <string name="password_forgotten">¿Has olvidado la contraseña?</string>
    <string name="dividerText">o</string>
    <string name="firebase_error_generic">Se ha producido un error. Inténtelo más tarde.</string>
    <string name="firebase_error_weak_password">Contraseña muy débil. Introduce al menos 6 caracteres.</string>
    <string name="firebase_error_wrong_password">La contraseña es erronea o ese usuario no tiene contraseña.</string>
    <string name="firebase_error_invalid_email_format">Introduce un correo válido</string>
    <string name="firebase_error_email_in_use">Ya existe un usuario con ese correo.</string>
    <string name="firebase_error_login_user_not_found">No existe un usuario con ese correo.</string>
    <string name="cloud_error_unavailable">Los servicios no se encuentran disponibles. Intenteló más tarde.</string>
    <string name="cloud_error_generic">Error al conectar. Intentelo más tarde.</string>
    <string name="firebase_error_network">Error. Comprueba el estado de tu conexión.</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="home_bottom_menu">Inicio</string>
    <string name="training_bottom_menu">Entrenamiento</string>
    <string name="training_record_bottom_menu">Historial</string>
    <string name="user_bottom_menu">Usuario</string>
    <string name="add_daily_training">Añade un entrenamiento para hoy</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="muscular_groups">Grupos Musculares</string>
    <string name="number_of_exercises">Ejercicios: %d</string>
    <string name="filter">Filtrar</string>
    <string name="cancel">Cancelar</string>
    <string name="add_quantity">Añadir(%d)</string>
    <string name="exercisesTitle">Ejercicios</string>
    <string name="custom_exercises_only">Solo personalizados</string>
    <string name="reset">Resetear</string>
    <string name="equipment">Equipamiento</string>
    <string name="all">Todos</string>
    <string name="muscular_group">Grupo Muscular</string>
    <string name="create_new_training">Crear nuevo entrenamiento</string>
    <string name="search">Buscar</string>
    <string name="create_your_first_training">¡Crea ya tu primer entrenamiento!</string>
    <string name="delete">Eliminar</string>
    <string name="modify">Modificar</string>
    <string name="set">Serie</string>
    <string name="repetitions">Repeticiones</string>
    <string name="weight">Peso</string>
    <string name="show_sets">Mostrar series</string>
    <string name="hide_sets">Ocultar series</string>
    <string name="body_weight">P. Corporal</string>
    <string name="name_hint">Nombre</string>
    <string name="description_hint">Descripción</string>
    <string name="cable">Cable</string>
    <string name="ez_bar">Barra Z</string>
    <string name="dumbbells">Mancuernas</string>
    <string name="barbell">Barra</string>
    <string name="back_muscle">Espalda</string>
    <string name="chest_muscle">Pecho</string>
    <string name="shoulders_muscle">Hombros</string>
    <string name="legs_muscle">Piernas</string>
    <string name="save">Guardar</string>
    <string name="add_exercises">Añadir Ejercicios</string>
    <string name="exercise_sets">Series</string>
    <string name="user_weight">Mi peso</string>
    <string name="user_preferences">Perferencias</string>
    <string name="user_exercises">Mis ejercicios</string>
    <string name="user_measures">Medidas</string>
    <string name="kg">kg</string>
    <string name="user_name_label">Nombre de usuario</string>
    <string name="exercise_sets_quantity">Series(%d)</string>
    <string name="cancel_training_edit">¿Quieres descartar los cambios?</string>
    <string name="discard">Descartar</string>
    <string name="training_exercise_required">El entrenamiento debe tener al menos un ejercicio.</string>
    <string name="training_name_required">Debes introducir un nombre para el entrenamiento.</string>
    <string name="create">Crear</string>
    <string name="exercise_name_required">Debes introducir un nombre al ejercicio.</string>
    <string name="exercise_equipment_required">Debes seleccionar un equipamiento.</string>
    <string name="exercise_muscular_group_required">Debes seleccionar un grupo muscular.</string>
    <string name="details">Detalles</string>
    <string name="confirm_delete_exercise_message">La eliminación del ejercicio implicará su eliminación de todos los entrenamientos a los que pertenece.</string>
    <string name="delete_with_time">Eliminar(%d)</string>
    <string name="create_user_exercise">Crear ejercicio</string>
    <string name="calendar">Calendario</string>
    <string name="user_without_trainings">No tienes ningún entrenamiento creado. ¡Crea ya tu primer entrenamiento!</string>
    <string name="remarks">Observaciones</string>
    <string name="cancel_daily_training_completed">Perderás las observaciones introducidas al salir.¿Estás seguro?</string>
    <string name="accept">Aceptar</string>
    <string name="Completed">Completado</string>
    <string name="training_progress_instruction">Selecciona los ejercicios completados y pulsa completado para guardarlo en el historial.</string>
    <string name="arms">Brazos</string>
    <string name="delete_training">El entrenamiento se eliminara permanentemente.</string>
    <string name="number_of_filters">Filtros(%d)</string>
    <string name="create_your_first_exercise">¡Crea ya tu primer ejercicio!</string>
    <string name="sign_up_password_helper">La contraseña debe contener mínimo 6 caracteres.</string>
    <string name="insert_username_hint">Introduce un nombre de usuario</string>
    <string name="recovery_password">Recuperar contraseña</string>
    <string name="recovery_password_instructions">Introduce el email para recuperar tu contraseña.</string>
    <string name="too_many_requests">Has excedido el limite de correos. Intentalo más tarde.</string>
    <string name="machine">Máquina</string>

</resources>