<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setsRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvInvisibleSets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/show_sets"
        android:textAlignment="center" />

    <LinearLayout
        android:id="@+id/setsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_min_margin"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone">

        <androidx.cardview.widget.CardView
            android:id="@+id/setsHeaderCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/setsHeaderRoot"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvSetHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/set"
                    app:layout_constraintEnd_toStartOf="@+id/tvWeightHeader"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvRepetitionsHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/body_weight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tvBodyWeightHeader"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvWeightHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/repetitions"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toStartOf="@+id/tvBodyWeightHeader"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tvSetHeader"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvBodyWeightHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toStartOf="@+id/tvRepetitionsHeader"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tvWeightHeader"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSets"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sets_recycler_height">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/tvVisibleSets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hide_sets"
            android:textAlignment="center" />
    </LinearLayout>

</LinearLayout>