<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setsHeaderCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/sets_view">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setsHeaderRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvSetHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/set"
            app:layout_constraintEnd_toStartOf="@+id/tvWeightHeader"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvRepetitionsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/body_weight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvBodyWeightHeader"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvWeightHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/repetitions"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/tvBodyWeightHeader"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvSetHeader"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvBodyWeightHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/tvRepetitionsHeader"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvWeightHeader"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>