<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/selectEquipmentRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/fragment_vertical_margin">

    <Button
        android:id="@+id/btnSelectEquipmentBarbell"
        style="@style/ButtonSelectorExerciseCreator"
        android:layout_width="@dimen/select_equipment_btn_width"
        android:layout_height="@dimen/select_equipment_btn_height"
        android:drawableTop="@drawable/ic_barbell"
        android:text="@string/barbell"
        app:layout_constraintEnd_toStartOf="@+id/btnSelectEquipmentDumbbells"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSelectEquipmentDumbbells"
        style="@style/ButtonSelectorExerciseCreator"
        android:layout_width="@dimen/select_equipment_btn_width"
        android:layout_height="@dimen/select_equipment_btn_height"
        android:drawableTop="@drawable/ic_dumbbell"
        android:singleLine="true"
        android:text="@string/dumbbells"
        app:layout_constraintEnd_toStartOf="@+id/btnSelectEquipmentEzBar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSelectEquipmentBarbell"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSelectEquipmentEzBar"
        style="@style/ButtonSelectorExerciseCreator"
        android:layout_width="@dimen/select_equipment_btn_width"
        android:layout_height="@dimen/select_equipment_btn_height"
        android:drawableTop="@drawable/ic_ez_bar"
        android:text="@string/ez_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSelectEquipmentDumbbells"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSelectEquipmentCable"
        style="@style/ButtonSelectorExerciseCreator"
        android:layout_width="@dimen/select_equipment_btn_width"
        android:layout_height="@dimen/select_equipment_btn_height"
        android:layout_marginTop="@dimen/vertical_min_margin"
        android:drawableTop="@drawable/ic_cable"
        android:text="@string/cable"
        app:layout_constraintEnd_toStartOf="@+id/btnSelectEquipmentBodyWeight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSelectEquipmentBarbell" />

    <Button
        android:id="@+id/btnSelectEquipmentBodyWeight"
        style="@style/ButtonSelectorExerciseCreator"
        android:layout_width="@dimen/select_equipment_btn_width"
        android:layout_height="@dimen/select_equipment_btn_height"
        android:drawableTop="@drawable/ic_bodyweight"
        android:singleLine="true"
        android:text="@string/body_weight"
        app:layout_constraintBottom_toBottomOf="@+id/btnSelectEquipmentCable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSelectEquipmentCable"
        app:layout_constraintTop_toTopOf="@+id/btnSelectEquipmentCable" />
</androidx.constraintlayout.widget.ConstraintLayout>