<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/passwordForgottenDialogRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/vertical_margin"
    tools:context=".ui.access.login.password.PasswordForgottenDialog">

    <TextView
        android:id="@+id/tvPasswordForgottenInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recovery_password_instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPasswordForgottenEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:hint="@string/email_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPasswordForgottenInstructions">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordForgottenEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnPasswordForgottenSend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/recovery_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPasswordForgottenEmail" />

    <ProgressBar
        android:id="@+id/pbPasswordForgottenLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>